objects/ssot__WebStore__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CheckoutTimeToLiveMinutesQuantity__c</fullName>
        <label>Checkout Time To Live Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CheckoutValidAfterDate__c</fullName>
        <label>Checkout Valid After Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultLanguage__c</fullName>
        <label>Default Language</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GuestCartTimeToLiveMinutesQuantity__c</fullName>
        <label>Guest Cart Time To Live Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Web Store Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGuestBrowsingEnabled__c</fullName>
        <label>Guest Browsing Enabled</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PricingStrategy__c</fullName>
        <label>Pricing Strategy</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesStoreType__c</fullName>
        <label>Sales Store Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipFromAddressId__c</fullName>
        <label>Ship From Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportedCurrenciesText__c</fullName>
        <label>Supported Currencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportedLanguagesText__c</fullName>
        <label>Supported Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreType__c</fullName>
        <label>Web Store Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebStore_LocationId_map_Location_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebStore_LocationId_map_Location_Id_N_1</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>WebStore_LocationId_map_Location_Id_N_1</relationshipLabel>
        <relationshipName>WebStore_LocationId_map_Location_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761220576_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebStore_ShipFromAddressId_map_Addre_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>WebStore_ShipFromAddressId_map_Addre_rel</relationshipLabel>
        <relationshipName>rel_1697761220576_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>